Added Map and Tabbed view bar

--- a/WorldTrotter/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/WorldTrotter/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bXy-nb-t1g">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Convert-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
@@ -74,6 +74,7 @@
                             <outletCollection property="gestureRecognizers" destination="Uy4-OT-v5V" appends="YES" id="IrF-zV-LfQ"/>
                         </connections>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Convert" image="Convert Icon" id="6Za-OH-cpe"/>
                     <connections>
                         <outlet property="FahrenheitTextField" destination="9PZ-d4-EDa" id="me6-JJ-6fO"/>
                         <outlet property="celsiusLabel" destination="des-jh-xWF" id="rht-wA-NKZ"/>
@@ -86,7 +87,43 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-65.217391304347828" y="138.61607142857142"/>
+            <point key="canvasLocation" x="1013" y="-27"/>
+        </scene>
+        <!--Map-->
+        <scene sceneID="gzm-un-I8Z">
+            <objects>
+                <viewController id="QFv-Q0-KWn" customClass="MapViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
+                    <mapView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="3p9-al-7Uq">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </mapView>
+                    <tabBarItem key="tabBarItem" title="Map" image="Image" id="Vz8-bp-EwC"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kl8-ab-riI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1722" y="457"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="JPK-D1-bEd">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="bXy-nb-t1g" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="VNV-N2-UsJ">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="aeh-H6-bjB"/>
+                        <segue destination="QFv-Q0-KWn" kind="relationship" relationship="viewControllers" id="JEL-sb-hWx"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AQL-0K-cBo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-35" y="184"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Convert Icon" width="48.5" height="32.5"/>
+        <image name="Image" width="48.5" height="32.5"/>
+    </resources>
 </document>
